fixed alignment

--- a/src/pages/IconListPage/IconListPage.module.css
+++ b/src/pages/IconListPage/IconListPage.module.css
@@ -9,7 +9,7 @@
     height: auto;
     width: auto;
     margin: 40px;
-    margin-left: 100px;
+    margin-left: 60px;
     place-items: center;
     justify-content: center;
 }
@@ -34,6 +34,7 @@
 @media (max-width: 1000px) {
   .iconListPage {
     flex-direction: column;
+    margin-left: 40px;
   }
 
   .list {
